# ansible

./: .env  .gitignore  README.md  makefile  ping_playbook.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post_create.sh
.github/: dependabot.yml
