[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".vscode", "__init__.py"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["A003", "D415", "E203", "S101", "D100", "D101", "D103", "S104"]
select = ["A", "N", "E", "D", "W", "F", "I", "C90", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ansible>=11.3.0"]

[dependency-groups]
dev = ["ruff>=0.9.10"]
